--- a/client/views/partials/ldView.html
+++ b/client/views/partials/ldView.html
@@ -136,34 +136,30 @@
                                     <div class="clearfix"></div>
                                     <div>
                                         <div class="actBox">
-                                            <span class="actId">1</span>
+                                            <span class="actId">1b</span>
                                             <h6 class="actName">Activity number one in the sequence</h6>
                                         </div>
                                         <div class="actBox">
-                                            <span class="actId">1</span>
+                                            <span class="actId">2b</span>
                                             <h6 class="actName">Activity number one in the sequence</h6>
                                         </div>
                                         <div class="actBox">
-                                            <span class="actId">1</span>
+                                            <span class="actId">3b</span>
                                             <h6 class="actName">Activity number one in the sequence</h6>
                                         </div>
                                         <div class="actBox">
-                                            <span class="actId">1</span>
+                                            <span class="actId">4b</span>
                                             <h6 class="actName">Activity number one in the sequence</h6>
                                         </div>
 
                                     </div>
                                     <div>
                                         <div class="actBox">
-                                            <span class="actId">1</span>
+                                            <span class="actId">5b</span>
                                             <h6 class="actName">Activity number one in the sequence</h6>
                                         </div>
                                         <div class="actBox">
-                                            <span class="actId">1</span>
-                                            <h6 class="actName">Activity number one in the sequence</h6>
-                                        </div>
-                                        <div class="actBox">
-                                            <span class="actId">1</span>
+                                            <span class="actId">6b</span>
                                             <h6 class="actName">Activity number one in the sequence</h6>
                                         </div>
 
