--- a/client/css/app.css
+++ b/client/css/app.css
@@ -28,11 +28,10 @@ img {
 ===================== */
 body {
     padding: 60px 0 40px;
-    background-color: #F5F4ED;
     font: 12px 'Raleway', sans-serif;
     line-height: 22px;
     color: #666666;
-    background-image: url("../img/creampaper.png");
+    background: #F5F4ED url("../img/creampaper.png");
 
 }
 
@@ -142,9 +141,8 @@ input.sidebarInput {
 
 #contentButtons {
     width: 100%;
-    margin: 0;
     text-align: justify;
-    margin-bottom: -20px;
+    margin: 0 0 -20px;
 }
 
 .btnContent {
@@ -155,17 +153,12 @@ input.sidebarInput {
     font-weight: bold;
     padding: 3px;
     border: 1px solid #CCCCCC;
-    border-radius: 6px;
     -moz-border-radius: 6px;
-    -webkit-border-radius: 6px;
+    -moz-border-bottom-left-radius: 0;
+    border-radius: 6px 6px 0 0;
 
-    border-bottom-left-radius: 0;
-    -moz-border-bottom-left-radius: 0px;
-    -webkit-border-bottom-left-radius: 0px;
-    border-bottom-right-radius: 0;
-
-    -moz-border-bottom-right-radius: 0px;
-    -webkit-border-bottom-right-radius: 0px;
+    -moz-border-bottom-right-radius: 0;
+    -webkit-border-radius: 6px 6px 0px 0px;
 
     border-bottom: none;
     border-top: none;
@@ -235,12 +228,10 @@ input.sidebarInput {
     border: 1px solid #CCCCCC;
     background-color: #FFFFFF;
     width: 99%;
-    border-radius: 6px;
     -moz-border-radius: 6px;
-    -webkit-border-radius: 6px;
-    border-top-left-radius: 0;
-    -moz-border-top-left-radius: 0px;
-    -webkit-border-top-left-radius: 0px;
+    border-radius: 0 6px 6px 6px;
+    -moz-border-top-left-radius: 0;
+    -webkit-border-radius: 0px 6px 6px 6px;
     margin: 0;
     padding: 0;
     min-height: 400px;
@@ -433,8 +424,7 @@ input.sidebarInput {
     border: none;
     border-right: 2px solid #FFFFFF;
     border-left: 2px solid #FFFFFF;
-    background-image: none;
-    background-color: transparent;
+    background: transparent none;
 }
 
 .btn-menu:hover {
@@ -564,8 +554,7 @@ li#loggedInUserName.nav-username {
 }
 
 .dropdown-menu > li > a:hover {
-    background-color: #0099CC;
-    background-image: none;
+    background: #0099CC none;
 }
 
 .dropdown-menu > li > a {
@@ -575,10 +564,8 @@ li#loggedInUserName.nav-username {
 /* registration form
 ===================== */
 .form-horizontal {
-    background-image: url("../img/signup.png");
-    background-repeat: no-repeat;
     background-size: 100% 100%;
-    background-position: center;
+    background: url("../img/signup.png") no-repeat center;
     margin: 30px 0 0 0;
 }
 
@@ -822,8 +809,7 @@ input[type="checkbox"] {
     }
 
     .navbar-inverse .btn-navbar {
-        background-color: #0099CC;
-        background-image: none;
+        background: #0099CC none;
         margin: 10px 30px;
     }
 
@@ -869,7 +855,7 @@ input[type="checkbox"] {
     }
 
     .top-margin {
-        margin-top: 0px;
+        margin-top: 0;
     }
 
     .control-group {
