--- a/client/views/partials/ldView.html
+++ b/client/views/partials/ldView.html
@@ -32,6 +32,10 @@
         <h5 class="zeroMargin">Students' Description:</h5>
         <span>{{ learningDesign.ld_students_profile }}</span>
     </div>
+
+    <!-- TODO: 2nd phase - Tag system -->
+       <!--
+
     <div class="clear marginTop"><h5 class=" zeroMargin">Tags:</h5>
 
         <ul class="zeroMargin">
@@ -41,6 +45,11 @@
         </ul>
 
     </div>
+
+    -->
+
+    <!-- TODO: 1st phase - Service for name of father and children LDs -->
+
     <div class="clear marginTop"><h5 class="zeroMargin">Related Designs:</h5>
         <ul class="zeroMargin">
             <li class="sidebarItem"><a ng-href="#" class="sidebarItemLink">item n. 1</a></li>
