--- a/client/views/index.html
+++ b/client/views/index.html
@@ -10,6 +10,7 @@
     <link href='https://fonts.googleapis.com/css?family=Raleway:400,700' rel='stylesheet' type='text/css'>
     <link href="/css/bootstrap.css" rel="stylesheet">
     <link href="/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="/css/bootstrap.icon-large.min.css" rel="stylesheet">
     <link href="/css/app.css" rel="stylesheet">
 
 </head>
@@ -74,7 +75,7 @@
                             <li class="dropdown">
 
                             <li id="loggedInUserName" class="nav-username">{{ user.username }}</li>
-                            <img src="/img/avatar_sample.png" alt="User Avatar" class="img-rounded user-pic"/>
+                            <img src="/img/user.png" alt="User Avatar" class="img-rounded user-pic"/>
                             <b class="caret"></b>
                         </a>
                         <ul class="dropdown-menu">
