--- a/client/views/index.html
+++ b/client/views/index.html
@@ -96,8 +96,10 @@
 
 <div ng-view class="container"></div>
 <div id="footer">
-    <div id="copyInfo">&copy; LEDITA</div>
     <a class="scrollup" href="#">Scroll</a>
+
+    <div id="copyInfo">LEDITA is distributed under <a href="http://opensource.org/licenses/MIT" target="_blank">MIT
+        Licence</a><br>&copy; 2011-2013 <a href="https://github.com/arpetti" target="_blank">Alessandro Arpetti</a> and <a href="https://github.com/danielabar" target="_blank">Daniela Baron</a></div>
 </div>
 <!-- Vendor Lib -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script>
