signup box style

--- a/client/views/partials/login.html
+++ b/client/views/partials/login.html
@@ -64,7 +64,7 @@
             <div class="controls">
                 <span class="errorTip" ng-show="registrationForm.terms.$dirty && registrationForm.terms.$error.required">Required!</span><br>
                 <label class="checkbox, whiteText">
-                <input type="checkbox" ng-model="terms"  name="terms"  required=""  />
+                <input type="checkbox" ng-model="terms"  name="terms"  required="" class="checkbox"  />
                 I agree to the <a href="#">Terms of Use</a> and <a href="#">Privacy Policy</a>
               </label>
 
