--- a/client/css/app.css
+++ b/client/css/app.css
@@ -662,8 +662,19 @@ li#loggedInUserName.nav-username {
     background-color: #0099CC;
     border-radius: 14px;
     margin: 0;
-    border: 3px solid #CCCCCC;
-    box-shadow: inset 0 1px 0 rgba(235, 235, 235, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+    border: 1px solid #cccccc;
+    *border: 0;
+    border-color: #e6e6e6 #e6e6e6 #bfbfbf;
+    border-color: rgba(0, 0, 0, 0.01) rgba(0, 0, 0, 0.01) rgba(0, 0, 0, 0.025);
+    border-bottom-color: #b3b3b3;
+
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#ffe6e6e6', GradientType=0);
+    filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
+    *zoom: 1;
+    -webkit-box-shadow: inset 0 3px 0 rgba(255, 255, 255, 0.2), 0 3px 3px rgba(0, 0, 0, 0.05);
+    -moz-box-shadow: inset 0 3px 0 rgba(255, 255, 255, 0.2), 0 3px 3px rgba(0, 0, 0, 0.05);
+    box-shadow: inset 0 3px 0 rgba(255, 255, 255, 0.2), 0 3px 3px rgba(0, 0, 0, 0.05);
+
 }
 
 .login-border {
@@ -679,6 +690,7 @@ li#loggedInUserName.nav-username {
     text-align: center;
     padding-top: 45px;
     margin: 0 auto 15px auto;
+
 }
 
 .btn-signup {
@@ -744,7 +756,9 @@ input[type="checkbox"] {
     border-radius: 6px;
     -moz-border-radius: 6px;
     -webkit-border-radius: 6px;
+
 }
+
 
 .errorTip {
     font: bold 11px helvetica, arial, sans-serif;
@@ -753,6 +767,7 @@ input[type="checkbox"] {
     background-color: #990000;
     padding: 3px;
 }
+
 
 /* misc
 ===================== */
