--- a/client/views/partials/home.html
+++ b/client/views/partials/home.html
@@ -3,14 +3,18 @@
   <!-- LD BOX START -->
   <div ng-repeat="learningDesign in learningDesigns | orderBy:'ld_last_edit_date':true" class="ld-border ld-item">
     <div class="ld-top">
-      A1<a ng-href="#/ld/{{learningDesign.ld_id}}" class="float-right"><i class="icon-star-empty icon-white"></i></a>
-    </div>
+
+        <div class="qcer">A2</div>
+        <div class="float-right">
+            {{ learningDesign.ld_scope }}</div>
+        </div>
     <div class="ld-center text-center">
       <h4 class="ld-name-text"><a ng-href="ld/{{ learningDesign.ld_id }}" >{{ learningDesign.ld_name }}</a></h4>
     </div>
     <div class="ld-bottom">
-      {{ learningDesign.ld_scope }}<span class="float-right">   {{ learningDesign.user_name }}&nbsp;{{ learningDesign.user_last_name }}
-   </span>
+        <a ng-href="#/ld/{{learningDesign.ld_id}}" class="starIcon"><i class="icon-star-empty icon-white"></i></a>
+
+            <a ng-href="#" class="float-left">   {{ learningDesign.user_name }}&nbsp;{{ learningDesign.user_last_name }}    </a>
     </div>
    </div>
   <!-- LD BOX END -->
